# TrainingMode-CommunityFriendEdition

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  build_windows.bat  minimal.cmake
ASM/Additional Codes/: Music At 0% By Default.asm
ASM/training-mode/: Globals.s
ASM/training-mode/Custom Events/: Custom Event Code - Rewrite.asm
ASM/training-mode/Custom Events/CSS and SSS/: Load CSS + Preload CPU.asm  Overwrite VS Text.asm
ASM/training-mode/Onscreen Display/: Generic Per Frame.asm  Grab Breakout.asm  Yoshi Egg Toss.asm
ASM/training-mode/Onscreen Display/Act OOTumble/: DamageLightHit - Check For Interrupt - Aerial Jump.asm  DamageLightHit - Check ForInterrupt 2.asm.asm
ASM/training-mode/Onscreen Display/Act OoWait/: Act OoWait - From Landing.asm  Act OoWait - From Wait.asm
ASM/training-mode/Onscreen Display/SDI Display/: SDI Display Main.asm
ASM/training-mode/Onscreen Display/Toggle UI/: Load Alt Text When Loaded With L.asm  XY To Adjust OSD Position.asm
Additional ISO Files/: opening.bnr
MexTK/: tmFunction.txt
MexTK/include/: fighter.h  memcard.h
TM-CE/: build_linux.sh
src/: events.c  events.h  lab.c  lab.h  lab_common.h  ledgedash.c  ledgedash.h  powershield.c  wavedash.c
